2009-08-04 Ozan Çağlayan <ozan@pardus.org.tr>
		* (operations/build.py): Really fix the abandoned file checking when
		the path in pspec.xml and the actual path of a missed file intersects.

2009-08-03 Fatih Aşıcı <fatih@pardus.org.tr>
		* Make it possible to specify doc directory's name via destDir
		parameter provided to pisitools.dodoc.

2009-06-30 Onur Küçük <onur@pardus.org.tr>
		* Change default make job number from 1 to 3 in pisi defaults,
		sometimes it is forgotten and we need to see parallel build errors

2009-06-26 Fatih Aşıcı <fatih@pardus.org.tr>
		* Pass relative paths of patches to quilt. This makes the
		patches directory have the same structure as the files
		directory of package.

2009-06-16 Fatih Aşıcı <fatih@pardus.org.tr>
		* Fix resetting of the environment.

2009-06-06 Ozan Çağlayan <ozan@pardus.org.tr>
		* (operations/build.py): Sort the files according to their path names
		before adding them to the tarfile. This helps lzma to compress the
		install.tar better. Thanks Onur for noticing this and giving the idea.

2009-05-07 Bahadır Kandemir <bahadir@pardus.org.tr>
        * Set DBus timeout for setupPackage calls.

2009-05-05 Bahadır Kandemir <bahadir@pardus.org.tr>
        * Increase DBus timeout
        * Always set COMAR client locale

2009-05-04 Fatih Aşıcı <fatih@pardus.org.tr>
        * Change distribution release to 2009.

2009-04-09 Ozan Çağlayan <ozan@pardus.org.tr>
        * (scripts/revdep-rebuild): Ignore /opt/ptsp during library and binary
        search.

2009-03-30 Faik Uygur <faik@pardus.org.tr>
        * Fix a bug in new "reverseDependencyUpdate" tag, where it forces to install all reverseDeps that are
        also not installed

2009-03-24 Bahadır Kandemir <bahadir@pardus.org.tr>
        * Allow disabling delta package support from pisi.conf

2009-03-24 Bahadır Kandemir <bahadir@pardus.org.tr>
        * Merged COMAR patch. PiSi now has a cleaner comar interface module.

2009-03-11 Ozan Çağlayan <ozan@pardus.org.tr>